03_infrastructure/external-access/dev/longhorn/ingressroute-patch-longhorn.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
spec:
  routes:
    - match: Host(`longhorn.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: longhorn-louketo-proxy
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-tls
spec:
  routes:
    - match: Host(`longhorn.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: longhorn-louketo-proxy
          port: 3000
